--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "core-js": "^3.6.4",
     "handlebars": "^4.7.3",
     "lodash.debounce": "^4.0.8",
-    "pnotify": "^5.0.0"
+    "material-design-icons": "^3.0.1",
+    "pnotify": "^4.0.1"
   }
 }
